feat: add asistencia check
